--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "art",
-  "homepage": "https://damax-codz.github.io/Art",
+  "homepage": "https://damax-codz.github.io/home",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
