--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "art",
-  "homepage": "https://damax-codz.github.io/home",
+  "homepage": "https://kingofvibe.github.io/Artme",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "framer-motion": "^7.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -42,6 +47,7 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.54.4"
   }
 }
